2002-04-18  Michael Opdenacker <michaelo@gnu.org>

	* gtypist.c: replaced '1998-2001' by `1998, 1999, 2000, 2001, 2002'
	  in the copyright notices (following GNU guidelines).

2002-04-16  Michael Opdenacker <michaelo@gnu.org>

	* po/: new Makevars file as recommended by gettextize.
	* Makefile.am: replaced 'INCLUDES' (deprecated) by 'AM_CPPFLAGS'
	* acconfig.h: removed because deprecated.
	  Replaced by the use of `-D' in AM_CPPFLAGS (see below).
	* configure.in: only kept AM_GNU_GETTEXT for i18n.
	  --nointl and --with-nointl options are no longer available,
	  but --disable-nls in still available.
	* Makefile.am: added a new AUTOMAKE_OPTIONS variable
	  set to '1.6 dist-bzip2 check-news' (see automake manual).
	* Other changes: to be documented very soon!
	* gtypist.c: Replaced PACKAGE_LOCALE_DIR by LOCALE_DIR:
          more standard: found in gettext doc and used by several packages. 
	* Makefile.am: Added '-DLOCALEDIR=\"$(datadir)/locale\"'
          to AM_CPPFLAGS (replaces PACKAGE_LOCAL_DIR defined in acconfig.h)
 
2002-04-08  Felix Natter  <fnatter@gmx.net>

	* gtypist.c (do_keybind): omit "%d%s"

2002-04-07  Michael Opdenacker <michaelo@gnu.org>

	* Added new Czech interface messages.

2002-04-07  Felix Natter  <fnatter@gmx.net>

	* gtypist.c (fatal_error): write "\n" if line==NULL
	(so that there is always a '\n' at the end of the error-message)

2002-04-05  Felix Natter  <fnatter@gmx.net>

	* gtypist.c: add /* xgettext: no-c-format */ comments so that
	xgettext does not think that '%' is part of a format-string
	(suggested by Bruno Haible)

2002-03-31  Felix Natter  <fnatter@gmx.net>

	* Makefile.am: add typefortune.1

2002-03-17  Felix Natter  <fnatter@gmx.net>

	* run gettextize from gettext 0.11.1
	* create po/Makevars
	* run aclocal with "-I m4" in autogen.sh

2002-03-14  Michael Opdenacker <michaelo@gnu.org>

	* autogen.sh: automake-1.6, autoconf 2.53, gettext-0.11 recommended;
        fixed links to their sources.