@@ -33,6 +33,14 @@
     exit 1
 }
 
+(help2man --version) < /dev/null > /dev/null 2>&1 || {
+    echo
+    echo "**Error**: You must have \`help2man' installed."
+    echo "Get ftp://ftp.gnu.org/gnu/help2man/help2man-1.27.tar.gz"
+    echo "(or a newer version if it is available)"
+    exit 1
+}
+
 echo "creating doc/gtypist.info..."
 makeinfo -Idoc doc/gtypist.texi -o doc/gtypist.info
 echo "creating lessons/gtypist.typ..."
